Golden build with Citybus stop search

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "google-oauth-jwt": "^0.2.0",
     "mime-types": "^2.1.27",
+    "moment": "^2.29.1",
     "mongoose": "^5.10.15",
     "node-fetch": "^2.6.0",
     "ts-node": "^9.0.0"
